--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ canvas#dust{
 <body>
 
 <div class="wrap">
-    <h1>🐂 牛马倒计时</h1>
+    <h1>🐂 下班倒计时</h1>
     <div class="subtitle">努力不一定有结果，但一定很累</div>
     <div class="time" id="time">00 天 00:00:00</div>
     <div class="desc" id="desc">今天也在正常运转</div>
@@ -441,3 +441,4 @@ window.addEventListener('resize', () => {
 
 </body>
 </html>
+
