--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
 <meta charset="UTF-8">
-<title>牛马倒计时 · 弹幕联机版</title>
+<title>下班倒计时 · 弹幕联机版</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
