--- a/index.html
+++ b/index.html
@@ -195,10 +195,10 @@ canvas#dust{
 <script>
 /******** Firebase 配置（⚠️ 必须换成你自己的） ********/
 const firebaseConfig = {
-  apiKey: "AIzaSyBdI1mZKLPuJ6YQk2zkSGRErxJszcLFdl4",
-  authDomain: "cow-horse-danmu1.firebaseapp.com",
-  databaseURL: "https://cow-horse-danmu1-default-rtdb.firebaseio.com",
-  projectId: "cow-horse-danmu1",
+  apiKey: "AIzaSyBAo6VlGLletfeDlAjdcfwARnieYdQNOMU",
+  authDomain: "xiaban-bb95e.firebaseapp.com",
+  databaseURL: "https://xiaban-bb95e-default-rtdb.firebaseio.com",
+  projectId: "xiaban-bb95e",
 };
 
 // Firebase初始化错误处理
@@ -519,3 +519,4 @@ window.addEventListener('resize', () => {
 
 </body>
 </html>
+
