--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@ const companies = [
     { name: "大博", hour: 16, minute: 50 },
     { name: "韶音", hour: 18, minute: 15 },
     { name: "中国移动", hour: 18, minute: 0 }
+    { name: "复旦中山", hour: 17, minute: 30 }
 ];
 
 /******** 动态计算目标时间 ********/
@@ -519,5 +520,6 @@ window.addEventListener('resize', () => {
 
 </body>
 </html>
+
 
 
