--- a/index.html
+++ b/index.html
@@ -310,6 +310,7 @@ const companies = [
     { name: "韶音", hour: 18, minute: 15 },
     { name: "中国移动", hour: 18, minute: 0 },
     { name: "复旦中山", hour: 17, minute: 30 }
+    { name: "家里蹲", hour: 8, minute: 30 }
 ];
 
 /******** 动态计算目标时间 ********/
@@ -615,4 +616,5 @@ window.addEventListener('resize', () => {
 
 </body>
 </html>
+
 
